Changes source file name of image
Change src of mountain and cloud images from images to Images in index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <div class="Top-Container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-Image">
+        <img class="top-cloud" src="Images/cloud.png" alt="cloud-Image">
         <h1>I'm Chirag</h1>
         <h2>Student Of Delhi University</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-Image">
-        <img src="images/mountain.png" alt="mountain-Image">
+        <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-Image">
+        <img src="Images/mountain.png" alt="mountain-Image">
     </div>
 
     <div class="middle-container">
